--- a/projetoco1/Tera.html
+++ b/projetoco1/Tera.html
@@ -125,10 +125,10 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="portimg/lcd.png" style="height:440px">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">power</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="estacao.html"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Estação Metereológica </h5>
+                    <h5><a href="estacao.html"> Estação Metereológica </a></h5>
                     <p>Projeto desenvolvido a fim de medir a temperatura, umidade, pressão e quantidade de gases nocivos no ambiente. Feito programando um arduino Uno.</p>
                   </div>
                 </div>
@@ -174,10 +174,10 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/robo.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="robo.html"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Insperbot 42 </h5>
+                    <h5><a href="robo.html"> Insperbot 42 </a></h5>
                     <p> Robô de batalha do estilo drum, feito como projeto para a entidade estudantil SMASH.</p>
                   </div>
                 </div>
