--- a/projetoco1/estacao.html
+++ b/projetoco1/estacao.html
@@ -24,10 +24,10 @@
     <div class="slider">
     <ul class="slides">
       <li>
-        <img src="portimg/gerador1.png"> <!-- random image -->
+        <img src="portimg/lcd.png"> <!-- random image -->
       </li>
       <li>
-        <img src="portimg/Gerador.png"> <!-- random image -->
+        <img src="portimg/lcd1.png"> <!-- random image -->
       </li>
     </ul>
   </div>
@@ -37,15 +37,14 @@
           <div class="col s12">
             <div class="section">
               <div class="col s12">
-                <span class="title nice">Gerador Termoelétrico</span>
+                <span class="title nice">Estação Metereológica</span>
               </div>
               <div class="col s12 ">
                 <div class="card">
                   <div class="card-content">
                     <h5>Prévia</h5>
                     <p>
-                        Esse é o segundo projeto da matéria Modelagem e Simulação do Mundo Físico, que se tratava de fazer uma modelagem de uma situação termoelétrica. Nesse caso, escolhemos
-                        modelar um gerador termoelétrico.</p>
+                        Projeto desenvolvido a fim de medir a temperatura, umidade, pressão e quantidade de gases nocivos no ambiente. Feito programando um arduino Uno.</p>
                   </div>
                 </div>
               </div>
@@ -54,7 +53,8 @@
                   <div class="card-content">
                     <h5>O Projeto</h5>
                     <p>
-                        O projeto foi feito em duplas, e reforçou nossas habilidades de modelagem e de fazer equações diferenciais no python. O projeto se trata de um gerador termoelétrico movido a água e como objetivo do projeto foi calculado o tempo necessário para carregar um celular utilizando água a 100 e 0 graus celsius.</p>
+                        O projeto foi feito em trios, e reforçou nossas habilidades de calibração e de medição. Além disso nos ajudou a aprender a remover incertezas de tipo A e de tipo B
+                        de medições, visto que elas não são 100% precisas e não retornam o mesmo resultado todas as vezes.</p>
                   </div>
                 </div>
               </div>
@@ -63,7 +63,8 @@
                   <div class="card-content">
                     <h5>Resultados</h5>
                     <p>
-                        O resultado final do projeto foi super interessante e descobrimos que seria necessário muito tempo para carregar um celular usando esse método.</p>
+                        O resultado final do projeto foi super interessante e terminamos com uma estação metereológica que media temperatura, umidade relativa, pressão e quantidade
+                        de gases inflamáveis.</p>
                   </div>
                 </div>
               </div>
