--- a/projetoco1/robo.html
+++ b/projetoco1/robo.html
@@ -24,10 +24,13 @@
     <div class="slider">
     <ul class="slides">
       <li>
-        <img src="portimg/gerador1.png"> <!-- random image -->
+        <img src="portimg/robo1.png"> <!-- random image -->
       </li>
       <li>
-        <img src="portimg/Gerador.png"> <!-- random image -->
+        <img src="portimg/robo2.png"> <!-- random image -->
+      </li>
+      <li>
+        <img src="portimg/robo.png"> <!-- random image -->
       </li>
     </ul>
   </div>
@@ -37,15 +40,15 @@
           <div class="col s12">
             <div class="section">
               <div class="col s12">
-                <span class="title nice">Gerador Termoelétrico</span>
+                <span class="title nice">Insperbot 42</span>
               </div>
               <div class="col s12 ">
                 <div class="card">
                   <div class="card-content">
                     <h5>Prévia</h5>
                     <p>
-                        Esse é o segundo projeto da matéria Modelagem e Simulação do Mundo Físico, que se tratava de fazer uma modelagem de uma situação termoelétrica. Nesse caso, escolhemos
-                        modelar um gerador termoelétrico.</p>
+                        Este foi um projeto feito como atividade extraclasse para a entidade estudantil do Insper SMASH. O projeto se trata de um robô de batalha.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -54,7 +57,8 @@
                   <div class="card-content">
                     <h5>O Projeto</h5>
                     <p>
-                        O projeto foi feito em duplas, e reforçou nossas habilidades de modelagem e de fazer equações diferenciais no python. O projeto se trata de um gerador termoelétrico movido a água e como objetivo do projeto foi calculado o tempo necessário para carregar um celular utilizando água a 100 e 0 graus celsius.</p>
+                        Esse projeto foi feito em uma equipe de 4 pessoas. Foi feito um robô do estilo drum com o objetivo de competir na Winter Challenge, uma competição
+                        de batalha de robôs. Esse projeto foi feito nas férias e foi muito bom para aprender diversas coisas interessantes.</p>
                   </div>
                 </div>
               </div>
@@ -63,7 +67,7 @@
                   <div class="card-content">
                     <h5>Resultados</h5>
                     <p>
-                        O resultado final do projeto foi super interessante e descobrimos que seria necessário muito tempo para carregar um celular usando esse método.</p>
+                        Como resultado final tivemos um robô de batalha feito do 0, e ganhamos uma batalha e perdemos outra na competição.</p>
                   </div>
                 </div>
               </div>
