--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -28,9 +28,9 @@
   <div class="section" style="height:385px">
     <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
-        <div class="image-container teamphoto">
+        <div class="image-container teamphoto  center-align">
             <a  href="tera.html">
-              <img src="fon.jpeg" class="teamphoto responsive-img" style="max-height:360px">
+              <img src="fon.jpeg" class="teamphoto responsive-img materializebox circle" style="max-height:260px">
             </a>
         </div>
       </div>
