--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -28,9 +28,9 @@
   <div class="section" style="height:385px">
     <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
-        <div class="image-container teamphoto  center-align">
+        <div class="image-container teamphoto">
             <a  href="tera.html">
-              <img src="fon.jpeg" class="teamphoto responsive-img materializebox circle" style="max-height:260px">
+              <img src="fon.jpeg" class="teamphoto responsive-img" style="max-height:360px">
             </a>
         </div>
       </div>
@@ -96,18 +96,20 @@
     <div class="row z-depth-2 white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-          <img src="portimg/laet.png" class="teamphoto responsive-img " style="max-height:360px"> 
+		  <a  href="paginaLaet.html">
+			<img src="laet.png" class="teamphoto responsive-img " style="max-height:360px"> 
+		  </a>
         </div>
       </div>
       <div class="col s12 m9">
         <h3>João Laet</h3>
         <div class="aboutfont">
-            <p>Aluno de engenharia mecatrônica no Insper</p>
+            <p>Aluno de engenharia mecânica no Insper</p>
             <p>Projetos de destaque:</p>
             <lu>
-              <li>Gerador Termoelétrico</li>
-              <li>Jogo de Poker em Python</li>
-              <li>Pinguiche</li>
+              <li>Aplicativo ubar em Python</li>
+              <li>Alimente os Animais Famintos</li>
+              <li>Simulação da decolagem de um avião</li>
             </lu>
           </div>
       </div>
