--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -25,6 +25,7 @@
         <img src="portimg/Lab.png" style="display: block;">
       </div>
     </div>
+  <div class='container'>
   <div class="section" style="height:385px">
     <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
@@ -35,7 +36,7 @@
         </div>
       </div>
       <div class="col s12 m9">
-        <h3>Felippe Teracini</h3>
+        <h3><a href=Tera.html>Felippe Teracini</a></h3>
         <div class="aboutfont">
             <p>Aluno de engenharia mecatrônica no Insper</p>
             <p>Projetos de destaque:</p>
@@ -49,22 +50,24 @@
     </div>
   </div>
   <div class="section" style="height:385px">
-    <div class="row z-depth-2 white">
+    <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-          <img src="portimg/Diego.png" class="teamphoto responsive-img " style="max-height:360px">
+          <a  href="tera.html">
+            <img src="fon.jpeg" class="teamphoto responsive-img" style="max-height:100%">
+          </a>
         </div>
       </div>
       <div class="col s12 m9">
         <h3>Diego David</h3>
         <div class="aboutfont">
-            <p>Aluno de engenharia mecatrônica no Insper</p>
-            <p>Projetos de destaque:</p>
-            <lu>
-              <li>Gerador Termoelétrico</li>
-              <li>Jogo de Poker em Python</li>
-              <li>Pinguiche</li>
-            </lu>
+          <p>Aluno de engenharia mecatrônica no Insper</p>
+          <p>Projetos de destaque:</p>
+          <lu>
+            <li>Gerador Termoelétrico</li>
+            <li>Jogo de Poker em Python</li>
+            <li>Pinguiche</li>
+          </lu>
         </div>
       </div>
     </div>
@@ -74,7 +77,7 @@
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
           <a  href="tera.html">
-            <img src="portimg/Tarraf.png" class="teamphoto responsive-img" style="max-height:100%">
+            <img src="fon.jpeg" class="teamphoto responsive-img" style="max-height:100%">
           </a>
         </div>
       </div>
@@ -93,28 +96,29 @@
     </div>
   </div>
   <div class="section" style="height:385px">
-    <div class="row z-depth-2 white">
+    <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-		  <a  href="paginaLaet.html">
-			<img src="laet.png" class="teamphoto responsive-img " style="max-height:360px"> 
-		  </a>
+            <a  href="tera.html">
+              <img src="fon.jpeg" class="teamphoto responsive-img" style="max-height:360px">
+            </a>
         </div>
       </div>
       <div class="col s12 m9">
         <h3>João Laet</h3>
         <div class="aboutfont">
-            <p>Aluno de engenharia mecânica no Insper</p>
+            <p>Aluno de engenharia mecatrônica no Insper</p>
             <p>Projetos de destaque:</p>
             <lu>
-              <li>Aplicativo ubar em Python</li>
-              <li>Alimente os Animais Famintos</li>
-              <li>Simulação da decolagem de um avião</li>
+              <li>Gerador Termoelétrico</li>
+              <li>Jogo de Poker em Python</li>
+              <li>Pinguiche</li>
             </lu>
           </div>
       </div>
     </div>
   </div>
+</div>
   <footer class="page-footer" style="background-color:#717170">
       <div class="container">
         <div class="row">
